--- a/templates/page-contact.html
+++ b/templates/page-contact.html
@@ -5,33 +5,33 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>Contact - Typerite</title>
+    <title>ProTv</title>
     <meta name="description" content="">
     <meta name="author" content="">
-
+  {% load static %}
     <!-- mobile specific metas
     ================================================== -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- CSS
     ================================================== -->
-    <link rel="stylesheet" href="css/base.css">
-    <link rel="stylesheet" href="css/vendor.css">
-    <link rel="stylesheet" href="css/main.css">
-
+   <link rel="stylesheet" href="{% static 'css/base.css' %}">
+   <link rel="stylesheet" href="{% static 'css/vendor.css' %}">
+   <link rel="stylesheet" href="{% static 'css/main.css' %}">
+   
     <!-- script
     ================================================== -->
-    <script src="js/modernizr.js"></script>
-
+    <script src="{% static 'js/modernizr.js' %}"></script>
+    
     <!-- favicons
     ================================================== -->
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-    <link rel="manifest" href="site.webmanifest">
-
-</head>
-
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'apple-touch-icon.png' %}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicon-32x32.png' %}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'favicon-16x16.png' %}">
+    <link rel="manifest" href="{% static 'site.webmanifest' %}">
+    
+    </head>
+    
 <body class="ss-bg-white">
 
     <!-- preloader
@@ -46,92 +46,77 @@
 
     <div id="top" class="s-wrap site-wrapper">
 
-        <!-- site header
-        ================================================== -->
-        <header class="s-header header">
+       <!-- site header
+       ================================================== -->
+       <header class="s-header">
+       
+       <div class="header__top">
+       <div class="header__logo">
+       <a class="site-logo" href="{% url 'home' %}">
+       <img src="{% static 'images/ico.svg' %}" alt="Homepage">
+       </a>
+       </div>
+       
+       <div class="header__search">
+       
+       <form role="search" method="get" class="header__search-form" action="#">
+       <label>
+       <span class="hide-content">Search for:</span>
+       <input type="search" class="header__search-field" placeholder="Type Keywords" value="" name="s" title="Search for:" autocomplete="off">
+       </label>
+       <input type="submit" class="header__search-submit" value="Search">
+       </form>
+       
+       <a href="#0" title="Close Search" class="header__search-close">Close</a>
+       
+       </div>  <!-- end header__search -->
+       
+       <!-- toggles -->
+       <a href="#0" class="header__search-trigger"></a>
+       <a href="#0" class="header__menu-toggle"><span>Menu</span></a>
+       
+       </div> <!-- end header__top -->
+       
+       <nav class="header__nav-wrap">
+       
+       <ul class="header__nav">
+       <li class="current"><a href="{% url 'home' %}" title="">Home</a></li>
+       <li class="has-children">
+       </li>
+      
+       <li><a href="{% static 'page-about.html' %}" title="">About</a></li>
+       <li><a href="{% static 'page-contact.html' %}" title="">Contact</a></li>
+       </ul> <!-- end header__nav -->
+       
+       <ul class="header__social">
+       <li class="ss-facebook">
+       <a href="https://facebook.com/">
+       <span class="screen-reader-text">Facebook</span>
+       </a>
+       </li>
+       <li class="ss-twitter">
+       <a href="#0">
+       <span class="screen-reader-text">Twitter</span>
+       </a>
+       </li>
+       <li class="ss-dribbble">
+       <a href="#0">
+       <span class="screen-reader-text">Dribbble</span>
+       </a>
+       </li>
+       <li class="ss-pinterest">
+       <a href="#0">
+       <span class="screen-reader-text">Behance</span>
+       </a>
+       </li>
+       </ul>
+       
+       </nav> <!-- end header__nav-wrap -->
+       
+       
+       
+       </header> <!-- end s-header -->
 
-            <div class="header__top">
-                <div class="header__logo">
-                    <a class="site-logo" href="index.html">
-                        <img src="images/logo.svg" alt="Homepage">
-                    </a>
-                </div>
-
-                <div class="header__search">
-    
-                    <form role="search" method="get" class="header__search-form" action="#">
-                        <label>
-                            <span class="hide-content">Search for:</span>
-                            <input type="search" class="header__search-field" placeholder="Type Keywords" value="" name="s" title="Search for:" autocomplete="off">
-                        </label>
-                        <input type="submit" class="header__search-submit" value="Search">
-                    </form>
-        
-                    <a href="#0" title="Close Search" class="header__search-close">Close</a>
-        
-                </div>  <!-- end header__search -->
-
-                <!-- toggles -->
-                <a href="#0" class="header__search-trigger"></a>
-                <a href="#0" class="header__menu-toggle"><span>Menu</span></a>
-
-            </div>
-
-            <nav class="header__nav-wrap">
-
-                <ul class="header__nav">
-                    <li><a href="index.html" title="">Home</a></li>
-                    <li class="has-children">
-                        <a href="#0" title="">Categories</a>
-                        <ul class="sub-menu">
-                        <li><a href="category.html">Lifestyle</a></li>
-                        <li><a href="category.html">Health</a></li>
-                        <li><a href="category.html">Family</a></li>
-                        <li><a href="category.html">Management</a></li>
-                        <li><a href="category.html">Travel</a></li>
-                        <li><a href="category.html">Work</a></li>
-                        </ul>
-                    </li>
-                    <li class="has-children">
-                        <a href="#0" title="">Blog</a>
-                        <ul class="sub-menu">
-                        <li><a href="single-video.html">Video Post</a></li>
-                        <li><a href="single-audio.html">Audio Post</a></li>
-                        <li><a href="single-gallery.html">Gallery Post</a></li>
-                        <li><a href="single-standard.html">Standard Post</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="styles.html" title="">Styles</a></li>
-                    <li><a href="page-about.html" title="">About</a></li>
-                    <li class="current"><a href="page-contact.html" title="">Contact</a></li>
-                </ul> <!-- end header__nav -->
-
-                <ul class="header__social">
-                    <li class="ss-facebook">
-                        <a href="https://facebook.com/">
-                            <span class="screen-reader-text">Facebook</span>
-                        </a>
-                    </li>
-                    <li class="ss-twitter">
-                        <a href="#0">
-                            <span class="screen-reader-text">Twitter</span>
-                        </a>
-                    </li>
-                    <li class="ss-dribbble">
-                        <a href="#0">
-                            <span class="screen-reader-text">Instagram</span>
-                        </a>
-                    </li>
-                    <li class="ss-behance">
-                        <a href="#0">
-                            <span class="screen-reader-text">Behance</span>
-                        </a>
-                    </li>
-                </ul>
-
-            </nav> <!-- end header__nav-wrap -->
-
-        </header> <!-- end s-header -->
 
 
         <!-- site content
@@ -143,9 +128,7 @@
 
                     <div class="media-wrap">
                         <div>
-                            <img src="images/thumbs/contact/contact-1000.jpg" srcset="images/thumbs/contact/contact-2000.jpg 2000w, 
-                                      images/thumbs/contact/contact-1000.jpg 1000w, 
-                                      images/thumbs/contact/contact-500.jpg 500w" sizes="(max-width: 2000px) 100vw, 2000px" alt="">
+                            <img src="{% static 'images/thumbs/contact/contact-1000.jpg' %}" alt="">
                         </div>
                     </div>
 
@@ -155,34 +138,16 @@
                         </h1>
                     </div> <!-- end content__page-header -->
 
-                    <p class="lead drop-cap">
-                    Duis ex ad cupidatat tempor Excepteur cillum cupidatat 
-                    fugiat nostrud cupidatat dolor sunt sint sit nisi est eu exercitation 
-                    incididunt adipisicing veniam velit id fugiat enim mollit amet anim veniam dolor 
-                    dolor irure velit commodo cillum sit nulla ullamco magna amet magna cupidatat qui 
-                    labore cillum sit in tempor veniam consequat non laborum adipisicing aliqua 
-                    ea nisi sint.
-                    </p>
-
-                    <p>
-                    Duis ex ad cupidatat tempor Excepteur cillum cupidatat fugiat nostrud cupidatat 
-                    dolor sunt sint sit nisi est eu exercitation incididunt adipisicing veniam velit 
-                    id fugiat enim mollit amet anim veniam dolor dolor irure velit commodo cillum sit 
-                    nulla ullamco magna amet magna cupidatat qui labore cillum sit in tempor veniam 
-                    consequat non laborum adipisicing aliqua ea nisi sint ut quis proident ullamco ut 
-                    dolore culpa occaecat ut laboris in sit minim cupidatat ut dolor voluptate enim 
-                    veniam consequat occaecat fugiat in adipisicing in amet Ut nulla nisi non ut enim 
-                    aliqua laborum mollit quis nostrud sed sed.
-                    </p>
+                   
 
                     <div class="row">
                         <div class="column large-six tab-full">
                             <h4>Where to Find Us</h4>
     
                             <p>
-                            1600 Amphitheatre Parkway<br>
-                            Mountain View, CA<br>
-                            94043 US
+                            Obafemi Awolowo University<br>
+                            Ile-Ife, Osun<br>
+                            Nigeria
                             </p>
     
                         </div>
@@ -190,40 +155,15 @@
                         <div class="column large-six tab-full">
                             <h4>Contact Info</h4>
     
-                            <p>sayhello@typerite.com<br>
-                            info@typerite.com <br>
-                            Phone: +197 543 2345
+                            <p>tobiadiks@gmail.com<br>
+                            WhatsApp/Call <br>
+                            Phone: +2348112806410
                             </p>
     
                         </div>
                     </div>
 
-                    <h3 class="h2">Say Hello</h3>
-        
-                    <form name="contactForm" id="contactForm" method="post" action="" autocomplete="off">
-                        <fieldset>
-    
-                            <div class="form-field">
-                                <input name="cName" id="cName" class="full-width" placeholder="Your Name" value="" type="text">
-                            </div>
-    
-                            <div class="form-field">
-                                <input name="cEmail" id="cEmail" class="full-width" placeholder="Your Email" value="" type="text">
-                            </div>
-    
-                            <div class="form-field">
-                                <input name="cWebsite" id="cWebsite" class="full-width" placeholder="Website" value="" type="text">
-                            </div>
-    
-                            <div class="message form-field">
-                                <textarea name="cMessage" id="cMessage" class="full-width" placeholder="Your Message"></textarea>
-                            </div>
-    
-                            <input name="submit" id="submit" class="btn btn--primary btn-wide btn--large full-width" value="Send Message" type="submit">
-    
-                        </fieldset>
-                    </form> <!-- end form -->
-
+                   
                 </section>
 
             </main>
@@ -238,7 +178,7 @@
                 <div class="column large-full footer__content">
                     <div class="footer__copyright">
                         <span>© Copyright Typerite 2019</span> 
-                        <span>Design by <a href="https://www.styleshout.com/">StyleShout</a></span>
+                        <span>Design by <a href="https://www.styleshout.com/">StyleShout</a> implemented by Pi-tech</span>
                     </div>
                 </div>
             </div>
