--- a/templates/index.html
+++ b/templates/index.html
@@ -82,28 +82,14 @@
                 <ul class="header__nav">
                     <li class="current"><a href="{% url 'home' %}" title="">Home</a></li>
                     <li class="has-children">
-                        <a href="#0" title="">Categories</a>
-                        <ul class="sub-menu">
-                        <li><a href="category.html">Lifestyle</a></li>
-                        <li><a href="category.html">Health</a></li>
-                        <li><a href="category.html">Family</a></li>
-                        <li><a href="category.html">Management</a></li>
-                        <li><a href="category.html">Travel</a></li>
-                        <li><a href="category.html">Work</a></li>
-                        </ul>
+                       
                     </li>
                     <li class="has-children">
                         <a href="#0" title="">Blog Posts</a>
-                        <ul class="sub-menu">
-                        <li><a href="single-video.html">Video Post</a></li>
-                        <li><a href="single-audio.html">Audio Post</a></li>
-                        <li><a href="single-gallery.html">Gallery Post</a></li>
-                        <li><a href="single-standard.html">Standard Post</a></li>
-                        </ul>
+                       
                     </li>
-                    <li><a href="styles.html" title="">Styles</a></li>
-                    <li><a href="page-about.html" title="">About</a></li>
-                    <li><a href="page-contact.html" title="">Contact</a></li>
+                   <li><a href="{% static 'page-about.html' %}" title="">About</a></li>
+                   <li><a href="{% static 'page-contact.html' %}" title="">Contact</a></li>
                 </ul> <!-- end header__nav -->
 
                 <ul class="header__social">
