--- a/templates/single.html
+++ b/templates/single.html
@@ -205,7 +205,7 @@
 
                     <div id="comments" class="column large-12">
 
-                        <h3 class="h2">5 Comments</h3>
+                        <h3 class="h2">Comments</h3>
         
                         <!-- START commentlist -->
                         <ol class="commentlist">
