--- a/templates/single.html
+++ b/templates/single.html
@@ -81,11 +81,8 @@
        
        <ul class="header__nav">
        <li class="current"><a href="{% url 'home' %}" title="">Home</a></li>
-       <li class="has-children">
-       </li>
       
-       <li><a href="{% static 'page-about.html' %}" title="">About</a></li>
-       <li><a href="{% static 'page-contact.html' %}" title="">Contact</a></li>
+     
        </ul> <!-- end header__nav -->
        
        <ul class="header__social">
@@ -248,7 +245,18 @@
                     </div> <!-- end comments -->
 
                     <div class="column large-12 comment-respond">
-
+                    <p>Launched right from OAU Chemistry Department By Adeleke Oluwatobi, the brain behind these Vision
+                    
+                    We keep You Up to date with all sorts of stuff you could imagine</p>
+                    
+                    <p>Help Lines
+                    
+                        WhatsApp : +2348112806410
+                        Email : tobiadiks@gmail.com
+                        
+                        </p>
+                        
+                        
                         <!-- START respond 
                         <div id="respond">
             
