--- a/templates/index.html
+++ b/templates/index.html
@@ -57,20 +57,7 @@
                     </a>
                 </div>
 
-                <div class="header__search">
-    
-                    <form role="search" method="get" class="header__search-form" action="#">
-                        <label>
-                            <span class="hide-content">Search for:</span>
-                            <input type="search" class="header__search-field" placeholder="Type Keywords" value="" name="s" title="Search for:" autocomplete="off">
-                        </label>
-                        <input type="submit" class="header__search-submit" value="Search">
-                    </form>
-        
-                    <a href="#0" title="Close Search" class="header__search-close">Close</a>
-        
-                </div>  <!-- end header__search -->
-
+                
                 <!-- toggles -->
                 <a href="#0" class="header__search-trigger"></a>
                 <a href="#0" class="header__menu-toggle"><span>Menu</span></a>
@@ -81,14 +68,7 @@
 
                 <ul class="header__nav">
                     <li class="current"><a href="{% url 'home' %}" title="">Home</a></li>
-                    <li class="has-children">
-                       
-                    </li>
-                    <li class="has-children">
-                        <a href="#0" title="">Blog Posts</a>
-                       
-                    </li>
-                   <li><a href="{% static 'page-about.html' %}" title="">About</a></li>
+                   
                    <li><a href="{% static 'page-contact.html' %}" title="">Contact</a></li>
                 </ul> <!-- end header__nav -->
 
@@ -167,7 +147,7 @@
 
             </div> <!-- end masonry-wrap -->
 
-            <div class="row">
+          <!--  <div class="row">
                 <div class="column large-full">
                     <nav class="pgn">
                         <ul>
@@ -183,7 +163,7 @@
                         </ul>
                     </nav>
                 </div>
-            </div>
+            </div>-->
 
         </div> <!-- end s-content -->
 
