--- a/templates/single.html
+++ b/templates/single.html
@@ -163,22 +163,7 @@
                         </p>
                     </div> <!-- end entry content -->
 
-                    <div class="entry__pagenav">
-                        <div class="entry__nav">
-                            <div class="entry__prev">
-                                <a href="#0" rel="prev">
-                                    <span>Previous Post</span>
-                                   Prev Post
-                                </a>
-                            </div>
-                            <div class="entry__next">
-                           <!--     <a href="#0" rel="next"> -->
-                                    <span>Next Post</span>
-                                Next Post 
-                                </a>
-                            </div>
-                        </div>
-                    </div> <!-- end entry__pagenav -->
+                   
 
                     <div class="entry__related">
                         <h3 class="h2">Related Articles</h3>
@@ -210,28 +195,26 @@
                             <li class="depth-1 comment">
         
                                 <div class="comment__avatar">
-                                    <img class="avatar" src="images/avatars/user-01.jpg" alt="" width="50" height="50">
+                                    <img class="avatar" src="{% static 'images/avatars/user-01.jpg' %}" alt="" width="50" height="50">
                                 </div>
-        
+                                {% for comment in comment_objects %}
                                 <div class="comment__content">
         
-                                    <!--<div class="comment__info">
-                                        <div class="comment__author">Itachi Uchiha</div>
-        -->
-                                        <div class="comment__meta">
-                                            <div class="comment__time"></div>
-                                            <div class="comment__reply">
-                                                <a class="comment-reply-link" href="#0">Reply</a>
-                                            </div>
+                                    <div class="comment__info">
+                                        <div class="comment__author">{{ comment.name }}</div>
+            
                                         </div>
                                     </div>
         
                                     <div class="comment__text">
-                                    <p>Comment Section Coming Soon !!! </p>
+                                    <p>{{ comment.name }} </p>
                                     </div>
-        
+        {% empty %}
+        <div class="comment__text">
+        <p>No Comments</p>
+        </div>
                                 </div>
-        
+        {% end for %}
                             </li> <!-- end comment level 1 -->
         
                             
@@ -247,7 +230,7 @@
                     <div class="column large-12 comment-respond">
                     <p>Launched right from OAU Chemistry Department By Adeleke Oluwatobi, the brain behind these Vision
                     
-                    We keep You Up to date with all sorts of stuff you could imagine</p>
+                    We keep You Up to date with all sorts of stuff you could never imagine</p>
                     
                     <p>Help Lines
                     
@@ -257,7 +240,7 @@
                         </p>
                         
                         
-                        <!-- START respond 
+                        <!-- START respond -->
                         <div id="respond">
             
                             <h3 class="h2">Add Comment <span>Your email address will not be published</span></h3>
@@ -273,9 +256,7 @@
                                         <input name="cEmail" id="cEmail" class="full-width" placeholder="Your Email" value="" type="text">
                                     </div>
             
-                                    <div class="form-field">
-                                        <input name="cWebsite" id="cWebsite" class="full-width" placeholder="Website" value="" type="text">
-                                    </div>
+                                 
             
                                     <div class="message form-field">
                                         <textarea name="cMessage" id="cMessage" class="full-width" placeholder="Your Message"></textarea>
