--- a/templates/single.html
+++ b/templates/single.html
@@ -214,7 +214,7 @@
         <p>No Comments</p>
         </div>
                                 </div>
-        {% end for %}
+        {% endfor %}
                             </li> <!-- end comment level 1 -->
         
                             
@@ -226,6 +226,44 @@
                         <!-- END commentlist -->
 
                     </div> <!-- end comments -->
+                    
+                    <!-- START respond -->
+                    <div id="respond">
+                    
+                    <h3 class="h2">Add Comment <span>Your email address will not be published</span></h3>
+                    
+                    <form name="contactForm" id="contactForm" method="post" action="" autocomplete="off">
+                    <fieldset>
+                    
+                    <div class="form-field">
+                    <input name="cName" id="cName" class="full-width" placeholder="Your Name" value="" type="text">
+                    </div>
+                    
+                    <div class="form-field">
+                    <input name="cEmail" id="cEmail" class="full-width" placeholder="Your Email" value="" type="text">
+                    </div>
+                    
+                    
+                    
+                    <div class="message form-field">
+                    <textarea name="cMessage" id="cMessage" class="full-width" placeholder="Your Message"></textarea>
+                    </div>
+                    
+                    <input name="submit" id="submit" class="btn btn--primary btn-wide btn--large full-width" value="Add Comment" type="submit">
+                    
+                    </fieldset>
+                    </form> <!-- end form -->
+                    
+                    </div>
+                    <!-- END respond-->
+                    
+                    </div> <!-- end comment-respond -->
+                    
+                    </div> <!-- end comments-wrap -->
+                    </main>
+                    
+                    </div>
+                        <!-- end s-content -->
 
                     <div class="column large-12 comment-respond">
                     <p>Launched right from OAU Chemistry Department By Adeleke Oluwatobi, the brain behind these Vision
@@ -240,42 +278,7 @@
                         </p>
                         
                         
-                        <!-- START respond -->
-                        <div id="respond">
-            
-                            <h3 class="h2">Add Comment <span>Your email address will not be published</span></h3>
-            
-                            <form name="contactForm" id="contactForm" method="post" action="" autocomplete="off">
-                                <fieldset>
-            
-                                    <div class="form-field">
-                                        <input name="cName" id="cName" class="full-width" placeholder="Your Name" value="" type="text">
-                                    </div>
-            
-                                    <div class="form-field">
-                                        <input name="cEmail" id="cEmail" class="full-width" placeholder="Your Email" value="" type="text">
-                                    </div>
-            
-                                 
-            
-                                    <div class="message form-field">
-                                        <textarea name="cMessage" id="cMessage" class="full-width" placeholder="Your Message"></textarea>
-                                    </div>
-            
-                                    <input name="submit" id="submit" class="btn btn--primary btn-wide btn--large full-width" value="Add Comment" type="submit">
-            
-                                </fieldset>
-                            </form> <!-- end form -->
-            
-                        </div>
-                        <!-- END respond-->
-            
-                    </div> <!-- end comment-respond -->
-            
-                </div> <!-- end comments-wrap -->
-            </main>
-
-        </div> <!-- end s-content -->
+                   
 
 
         <!-- footer
