--- a/templates/single.html
+++ b/templates/single.html
@@ -232,7 +232,7 @@
                     
                     <h3 class="h2">Add Comment <span>Your email address will not be published</span></h3>
                     
-                    <form name="contactForm" id="contactForm" method="post" action="" autocomplete="off">
+                    <form name="contactForm" id="contactForm" method="post" action="" autocomplete="off">{% csrf_token %}
                     <fieldset>
                     
                     <div class="form-field">
