--- a/templates/index.html
+++ b/templates/index.html
@@ -124,11 +124,11 @@
                                 <h6 class="entry__title"><a href="{% url 'blog_id' post.id %}">{{ post.title }}</a></h6>
                                 <div class="entry__meta">
                                     <span class="entry__meta-cat">
-                                        <a href="category.html">{{ post.category }}</a> 
+                                        <a href="#">{{ post.category }}</a> 
                                         <a href="{% static 'category.html' %}"><b>{{ post.author }}</b></a>
                                     </span>
                                     <span class="entry__meta-date">
-                                        <a href="single-standard.html">{{ post.published }}</a>
+                                        <a href="#">{{ post.published }}</a>
                                     </span>
                                 </div>
                                 
