--- a/templates/single.html
+++ b/templates/single.html
@@ -201,13 +201,13 @@
                                 <div class="comment__content">
         
                                     <div class="comment__info">
-                                        <div class="comment__author">{{ comment.commenter_name }}, {{ comment.comment_time }}</div>
+                                        <div class="comment__author">{{ com.commenter_name }}, {{ com.comment_time }}</div>
             
                                         </div>
                                     </div>
         
                                     <div class="comment__text">
-                                    <p>{{ comment.comments }} </p>
+                                    <p>{{ com.comments }} </p>
                                     </div>
         {% empty %}
         <div class="comment__text">
