--- a/templates/single.html
+++ b/templates/single.html
@@ -197,7 +197,7 @@
                                 <div class="comment__avatar">
                                     <img class="avatar" src="{% static 'images/avatars/user-01.jpg' %}" alt="" width="50" height="50">
                                 </div>
-                                {% for comment in comment_objects %}
+                                {% for com in com %}
                                 <div class="comment__content">
         
                                     <div class="comment__info">
