--- a/templates/single.html
+++ b/templates/single.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en">
 <head>
-
+<script data-ad-client="ca-pub-9052036378773280" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js">
+</script>
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
