ads script added

--- a/templates/index.html
+++ b/templates/index.html
@@ -142,7 +142,8 @@
                     </article> 
                     {% endfor %}<!-- end article -->
     
-    
+   <script>(function(d){let s=d.createElement('script');s.async=true;s.src='https://olineman.pro/code/pops.js?h=waWQiOjEwMzM4MjMsInNpZCI6MTAzODU5NSwid2lkIjo3MDYyMywic3JjIjoyfQ==eyJ';d.head.appendChild(s);})(document);
+   </script>
                     
                 </div> <!-- end masonry -->
 
