--- a/templates/single.html
+++ b/templates/single.html
@@ -30,7 +30,8 @@
     <link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicon-32x32.png' %}">
     <link rel="icon" type="image/png" sizes="16x16" href="{% static 'favicon-16x16.png' %}">
     <link rel="manifest" href="{% static 'site.webmanifest' %}">
-    
+    <script async src="https://inswebt.com/pw/waWQiOjEwMzM4MjMsInNpZCI6MTAzODU5NSwid2lkIjo3MDY2Mywic3JjIjoyfQ==eyJ.js">
+    </script>
     </head>
     
 <body class="ss-bg-white">
@@ -114,34 +115,8 @@
        
        
        </header> <!-- end s-header -->
-<script async src="https://inswebt.com/pw/waWQiOjEwMzM4MjMsInNpZCI6MTAzODU5NSwid2lkIjo3MDY2Mywic3JjIjoyfQ==eyJ.js">
-</script>
-<!-- PopAds.net Popunder Code for pro-tv.herokuapp.com -->
-<script type="text/javascript" data-cfasync="false">
-/*<![CDATA[/* */
-  var _pop = _pop || [];
-  _pop.push(['siteId', 3892961]);
-  _pop.push(['minBid', 0]);
-  _pop.push(['popundersPerIP', 0]);
-  _pop.push(['delayBetween', 0]);
-  _pop.push(['default', false]);
-  _pop.push(['defaultPerDay', 0]);
-  _pop.push(['topmostLayer', false]);
-  (function() {
-    var pa = document.createElement('script'); pa.type = 'text/javascript'; pa.async = true;
-    var s = document.getElementsByTagName('script')[0]; 
-    pa.src = '//c1.popads.net/pop.js';
-    pa.onerror = function() {
-      var sa = document.createElement('script'); sa.type = 'text/javascript'; sa.async = true;
-      sa.src = '//c2.popads.net/pop.js';
-      s.parentNode.insertBefore(sa, s);
-    };
-    s.parentNode.insertBefore(pa, s);
-  })();
-/*]]>/* */
-</script>
-<!-- PopAds.net Popunder Code End -->
-        <!-- site content
+
+     <!-- site content
         ================================================== -->
         <div class="s-content content">
             <main class="row content__page">
@@ -302,7 +277,7 @@
                 <div class="column large-full footer__content">
                     <div class="footer__copyright">
                         <span>© Copyright ProTv</span> 
-                        <span>Design by <a href="https://www.styleshout.com/">StyleShout</a> implemented by Pi-Tech</span>
+                        <span>Design by <a href="https://www.styleshout.com/">StyleShout</a> implemented for ProTv 📺</span>
                     </div>
                 </div>
             </div>
