--- a/templates/single.html
+++ b/templates/single.html
@@ -141,7 +141,7 @@
                     <div class="entry__content">
 
                         <p class="lead drop-cap">
-                        {{ posts.content }}
+                        {{ posts.content|linebreaksbr }}
                         </p>
 
                         
